// =============================================
// 채팅 서비스 DB 스키마
// V1__init_schema.sql 기준 (단일 마이그레이션으로 통합)
// =============================================

// 최초 API 호출 시 JWT sub 기준으로 upsert.
// DM 생성 시 targetUserId 유효성 검증 및 기본 그룹 자동 생성에 사용.
Table users {
  id         varchar(255) [pk, note: 'JWT sub (외부 인증 서버 발급 식별자)']
  created_at timestamptz  [not null, default: `NOW()`]
  updated_at timestamptz  [not null, default: `NOW()`]
}

Table chat_rooms {
  id         uuid         [pk, default: `gen_random_uuid()`]
  type       varchar(50)  [not null, note: 'DM | GROUP | PUBLIC']
  room_key   varchar(255) [not null, unique]
  name       varchar(100) [note: 'DM 방은 null 허용']
  password   varchar(255) [note: 'BCrypt 해싱 저장. PUBLIC 방만 사용. null이면 비밀번호 없음']
  created_by varchar(255) [not null]
  created_at timestamptz  [not null, default: `NOW()`]
  updated_at timestamptz  [not null, default: `NOW()`]

  indexes {
    created_by [name: 'idx_chat_rooms_created_by']
  }
}

// 프로필은 사용자 종속 - 최초 API 호출 시 기본 프로필 1개 자동 생성
// 채팅방 입장 시 profileId를 선택해서 연결
Table profiles {
  id         bigint       [pk, increment]
  user_id    varchar(255) [not null]
  nickname   varchar(50)  [not null]
  created_at timestamptz  [not null, default: `NOW()`]
  updated_at timestamptz  [not null, default: `NOW()`]

  indexes {
    user_id [name: 'idx_profiles_user_id']
  }
}

// DM:     is_hidden(현재 숨김 여부) + hidden_at(나간 시각, 메시지 노출 기준점 - 숨김 해제 후에도 유지)
// GROUP:  left_at(자발적 퇴장 시각, NOT NULL이면 미참여 상태 - 초대 받으면 재참여 가능) | kicked_at(강퇴 - 재참여,초대 불가)
// PUBLIC: kicked_at(강퇴 - 재참여,초대 불가) | 자발적 퇴장 시 레코드 삭제
Table chat_room_members {
  id         bigint       [pk, increment]
  room_id    uuid         [not null, ref: > chat_rooms.id]
  user_id    varchar(255) [not null]
  profile_id bigint       [not null, ref: > profiles.id]
  role       varchar(20)  [not null, default: 'MEMBER', note: 'OWNER | MEMBER']
  is_hidden  boolean      [not null, default: false, note: 'DM: 현재 목록 숨김 여부']
  hidden_at  timestamptz  [note: 'DM: 숨김 처리 시각. 메시지 노출 기준점. 숨김 해제 후에도 유지']
  left_at    timestamptz  [note: 'GROUP: 자발적 퇴장 시각. NOT NULL이면 미참여 상태 (초대 받으면 재참여 가능)']
  kicked_at  timestamptz  [note: 'GROUP/PUBLIC: 강퇴 시각. NOT NULL이면 재참여,초대 불가']
  created_at timestamptz  [not null, default: `NOW()`]
  updated_at timestamptz  [not null, default: `NOW()`]

  indexes {
    room_id            [name: 'idx_members_room_id']
    user_id            [name: 'idx_members_user_id']
    (room_id, user_id) [unique, name: 'uidx_members_room_user']
  }
}

Table invitations {
  id         bigint       [pk, increment]
  room_id    uuid         [not null, ref: > chat_rooms.id]
  inviter_id varchar(255) [not null]
  invitee_id varchar(255) [not null]
  status     varchar(20)  [not null, default: 'PENDING', note: 'PENDING | ACCEPTED | REJECTED']
  created_at timestamptz  [not null, default: `NOW()`]
  updated_at timestamptz  [not null, default: `NOW()`]

  indexes {
    invitee_id         [name: 'idx_invitations_invitee_id']
    room_id            [name: 'idx_invitations_room_id']
    (room_id, invitee_id) [unique, name: 'uidx_invitations_pending', note: 'partial: WHERE status = PENDING']
  }
}

Table messages {
  id         bigint       [pk, increment]
  room_id    uuid         [not null, ref: > chat_rooms.id]
  sender_id  varchar(255) [not null]
  profile_id bigint       [ref: > profiles.id, note: 'nullable — 프로필 삭제 시 ON DELETE SET NULL, 닉네임 빈칸 표시']
  content    text         [not null, note: '최대 1,000자 — 애플리케이션 레벨 @Size(max=1000) 검증']
  type       varchar(20)  [not null, default: 'TEXT', note: 'TEXT | IMAGE | FILE']
  is_edited  boolean      [not null, default: false]
  created_at timestamptz  [not null, default: `NOW()`]
  updated_at timestamptz  [not null, default: `NOW()`]
  deleted_at timestamptz

  indexes {
    room_id              [name: 'idx_messages_room_id']
    (room_id, created_at) [name: 'idx_messages_created_at']
    (room_id, id)        [name: 'idx_messages_room_id_cursor', note: 'partial: WHERE deleted_at IS NULL — 커서 페이징 최적화']
  }
}

Table room_read_cursors {
  id                   bigint       [pk, increment]
  room_id              uuid         [not null, ref: > chat_rooms.id]
  user_id              varchar(255) [not null]
  last_read_message_id bigint       [ref: > messages.id]
  created_at           timestamptz  [not null, default: `NOW()`]
  updated_at           timestamptz  [not null, default: `NOW()`]

  indexes {
    (room_id, user_id) [unique, name: 'uidx_read_cursors_room_user']
  }
}

Table user_groups {
  id         bigint       [pk, increment]
  user_id    varchar(255) [not null]
  name       varchar(50)  [not null]
  is_default boolean      [not null, default: false]
  created_at timestamptz  [not null, default: `NOW()`]
  updated_at timestamptz  [not null, default: `NOW()`]

  indexes {
    user_id        [name: 'idx_user_groups_user_id']
    (user_id, name) [unique, name: 'uidx_groups_user_name']
  }
}

Table room_group_memberships {
  id         bigint       [pk, increment]
  room_id    uuid         [not null, ref: > chat_rooms.id]
  group_id   bigint       [not null, ref: > user_groups.id]
  created_at timestamptz  [not null, default: `NOW()`]

  indexes {
    (room_id, group_id) [unique, name: 'uidx_room_group']
  }
}

// token      : URI에 포함될 고유 토큰
// expires_at : NULL이면 만료 없음. NOT NULL이면 해당 시각 이후 사용 불가
// is_active  : false이면 방장이 비활성화(삭제)한 URI
Table room_invite_links {
  id         bigint       [pk, increment]
  room_id    uuid         [not null, ref: > chat_rooms.id]
  token      varchar(255) [not null]
  created_by varchar(255) [not null]
  expires_at timestamptz
  is_active  boolean      [not null, default: true]
  created_at timestamptz  [not null, default: `NOW()`]

  indexes {
    room_id [name: 'idx_invite_links_room_id']
    token   [unique, name: 'uidx_invite_links_token']
  }
}
